--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@types/node": "22.15.18",
     "@types/react": "19.1.4",
+    "eslint": "^9.29.0",
     "typescript": "5.8.3"
   }
 }
