--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.2",
     "autoprefixer": "^10.4.17",
     "axios": "^1.9.0",
@@ -31,6 +32,7 @@
     "@types/node": "22.15.18",
     "@types/react": "19.1.4",
     "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.4",
     "typescript": "5.8.3"
   }
 }
